--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -173,6 +173,7 @@
       right: 0
       &--visible
         display: block
+        overflow: auto
     &-menu
       padding-top: 31px
       &__list      
